XMLExper/m12/m12_560_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘virtual bool tinyxml2::XMLPrinter::VisitEnter(const tinyxml2::XMLElement&, const tinyxml2::XMLAttribute*)’:
tinyxml2.cpp:2988:107: error: cannot dynamic_cast ‘parentElem’ (of type ‘const class tinyxml2::XMLElement*’) to type ‘class tinyxml2::XMLNode*’ (conversion casts away constness)
 2988 |     const bool compactMode = parentElem ? CompactMode( */*PCI*/dynamic_cast<tinyxml2::XMLNode*>(parentElem) ) : _compactMode;
      |                                                                                                           ^
diff: tinyxml2.o: No such file or directory
